# tts-scribe

./: .env.example  .gitignore  README.md  apispec.md  pyproject.toml
src/tts_server/: audio.py  auth.py  config.py  engine.py  logging.py  main.py  schemas.py
src/tts_server/routes/: health.py  speech.py  stream.py  voices.py
