[project]
name = "tts-server"
version = "0.1.0"
description = "Production-grade streaming TTS API server powered by Qwen3-TTS"
requires-python = ">=3.12"
dependencies = [
    "qwen-tts @ git+https://github.com/dffdeeq/Qwen3-TTS-streaming.git",
    "torch>=2.4",
    "torchaudio>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "pydub>=0.25",
    "numpy",
    "soundfile",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.6"]

[project.scripts]
tts-server = "tts_server.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_server"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[tool.ruff]
target-version = "py312"
line-length = 100
